<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HaveABreakActivity!</string>
    <string name="app_name">HaveABreak</string>
    <string name="button">Button</string>
    <string name="addNewBreak">Add New Break</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="switchText">On/Off</string>
    <string name="silentModeText">Silent Mode</string>
    <string name="reminderServiceTitle">HaveABreak - Reminder</string>
    <string name="addNewBreakTitle">HaveABreak - Add New Break</string>
    <string name="editBreakTitle">HaveABreak - Edit Break</string>
    <string name="calendarTitle">HaveABreak - Calendar</string>
    <string name="settingsTitle">HaveABreak - Settings</string>
    <string name="silentModeTypeText">Silent Mode Type</string>
    <string name="aboutTitle">HaveABreak - About</string>
    <string name="numberOfDaysText">Number of Days on Main Page</string>
    <string name="name">Name (must be filled)</string>
    <string name="description">Description (notification text)</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="periodic">Periodic</string>
    <string name="repeat">Repeat</string>
    <string name="save">Save</string>
    <string name="enable">Enable</string>
    <string name="notificationType">Notification type</string>
    <string name="minutePeriod">Minute period</string>
    <string name="dayPeriod">Day period</string>
    <string name="weekPeriod">Week period</string>
    <string name="chooseDays">Choose days</string>
    <string name="monthPeriod">Month period</string>
    <string name="yearPeriod">Year period</string>
    <string name="none">None</string>
    <string name="nameEmptyError">Name should not be empty. Please fill it.</string>
    <string name="attentionTitle">Attention</string>
    <string name="endTimeError">End time value should be bigger than start time value.</string>
    <string name="chosenDaysError">You should choose atleast one day for periodic notification.</string>
    <string name="shortSunday">Sun</string>
    <string name="shortMonday">Mon</string>
    <string name="shortTuesday">Tue</string>
    <string name="shortWednesday">Wed</string>
    <string name="shortThursday">Thu</string>
    <string name="shortFriday">Fri</string>
    <string name="shortSaturday">Sat</string>
    <string name="dayCalendarTab">Day</string>
    <string name="weekCalendarTab">Week</string>
    <string name="monthCalendarTab">Month</string>
    <string name="dots">…</string>
    <string name="noBreakText">No breaks for this day…</string>
    <string name="addNewBreakConfirmation">New break was added successfully</string>
    <string name="breakDeletedConfiramtionFormat">Break \'%s\' was deleted successfully</string>
    <string name="breakDeletedErrorFormat">Break \'%s\' deleting has failed</string>
    <string name="breakEditingConfirmation">Break was edited successfully</string>
    <string name="silendModeOnNotification">Silent mode switched on</string>
    <string name="silendModeOffNotification">Silent mode switched off</string>
    <string name="applicationSwitchedOnNotification">HaveABreak service switched on</string>
    <string name="applicationSwitchedOffNotification">HaveABreak service switched off</string>
    <string name="noBreakMessage">No breaks</string>
    <string name="noMoreBreakMessage">No more breaks today</string>
    <string name="aboutText">&#x9;"HaveABreak" - is an application that reminds user to make some breaks during the work time, working on computer or to do something.
        \n&#x9;It was created by Andrii Dzhyrma and Liliia Chuba as a course project. Project advisors: Prof. Matthias Kranz and Andreas Möller.
        \n&#x9;If you have questions or suggestions please contact us: \n(haveabreak.team@gmail.com)
</string>
    <string name="template">Template</string>
    <string name="templates">Templates</string>

</resources>