<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/template"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/templateSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/button_back"
            android:drawSelectorOnTop="true"
            android:entries="@array/templateNames"
            android:padding="5dp"
            android:prompt="@string/templates" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/startTime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/startDateButton"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/button_back"
                android:textColor="@android:color/primary_text_dark" />

            <Button
                android:id="@+id/startTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/button_back"
                android:textColor="@android:color/primary_text_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/periodic"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/periodicCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/periodicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- android:visibility="gone" -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endTime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/endTimeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/endTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/endDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:padding="5dp"
                    android:textColor="@android:color/primary_text_dark" />

                <Button
                    android:id="@+id/endTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:padding="5dp"
                    android:textColor="@android:color/primary_text_dark" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/repeat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/repeatSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/button_back"
                android:drawSelectorOnTop="true"
                android:entries="@array/periodicType"
                android:padding="5dp"
                android:prompt="@string/repeat" />

            <LinearLayout
                android:id="@+id/repeatInputValueLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/repeatInputValueTextView"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/repeatInputValueEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="number"
                    android:padding="5dp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chooseDaysLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/chooseDays"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/chooseDaysButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/button_back"
                    android:padding="5dp"
                    android:textColor="@android:color/primary_text_dark" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/notificationType"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/notificationButton"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/button_back"
            android:padding="5dp"
            android:textColor="@android:color/primary_text_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/enableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/button_back"
            android:text="@string/save"
            android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>

</ScrollView>