<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/switchText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/switchOffToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/silentModeText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/silentModeToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silentModeTypeText"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <Spinner
        android:id="@+id/silentModeTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginBottom="5dip"
        android:paddingLeft="10dip"
        android:background="@drawable/button_back"
        android:drawSelectorOnTop="true"
        android:entries="@array/silentModeType"
        android:prompt="@string/silentModeTypeText" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/numberOfDaysText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/numberOfDaysEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </TableRow>

</LinearLayout>