<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchText"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/switchOffToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
               	android:textOn=""
               	android:textOff=""
                android:background="@drawable/on"/>
            <QuickContactBadge android:id="@+id/quickContactBadge1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/calendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/calendar"
            android:gravity="center"
            android:text="@string/calendar"
            android:textColor="@android:color/secondary_text_dark" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silentModeText"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/silentModeToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn=""
               	android:textOff=""
                android:background="@drawable/silenceon"/> 

        </LinearLayout>
    </TableRow>

    <!--
         ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
    -->
<View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray" />
    <ListView
        android:id="@+id/dayListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>
    <!-- /ScrollView -->

    <Button
        android:id="@+id/addNewBreakButton"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/addNewBreak"
        android:background="@drawable/button_back"
        android:textColor="@android:color/primary_text_dark"

         />

</LinearLayout>